# robot-g1-Handover

./: .gitignore  ABOUT.md  ARCHITECTURE.md  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  DEPLOYMENT.md  EXAMPLES.md  FAQ.md  GITHUB_SETUP_INSTRUCTIONS.md  GLOSSARY.md  IMPROVEMENT_SUMMARY.md  MILESTONES.md  PROJECTS.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RELEASE_NOTES.md  ROADMAP.md  STATUS.md  TESTING.md  TROUBLESHOOTING.md  TUTORIALS.md  UPDATE_SUMMARY.md  UX_IMPROVEMENTS_SUMMARY.md  WYKONANO.md  package.xml  readme.txt  requirements.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE_BUG.md  ISSUE_TEMPLATE_DOCUMENTATION.md  ISSUE_TEMPLATE_FEATURE.md  ISSUE_TEMPLATE_QUESTION.md  PULL_REQUEST_TEMPLATE.md
.github/agents/: Skryba.agent.md  kierownik.agent.md  koder-indywidualista.agent.md  koder.agent.md  my-agent.agent.md  psyUX.agent.md  (+4 more)
config/: DiagramFSM.txt  Mapowanie WMA na trajektorie MoveIt 2.yaml  README.md  Struktura pakietów ROS 2.txt  URDF.html  constants.py  grasp_params.yaml  moveit.yaml  presets.yaml
decision/: README.md  __init__.py  wma_handover_manager.py  wma_task_manager.py
launch/: README.md  full_handover_pipeline.launch.py  full_pipeline.launch.py  launch_perception.launch.py
manipulation/: README.md  __init__.py  execute_grasp.py  execute_handover.py  grasp_planner.py  handover_planner.py  moveit_interface.py  planning_scene.py
perception/: README.md  __init__.py  human_hand_detector.py  launch_perception.py  object_detector.py  pose_estimator_6d.py  static_tf_camera.py
tests/: conftest.py  test_planning_and_decision.py
