<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g1_pick_and_handover</name>
  <version>1.0.0</version>
  <description>System przekazywania obiektów (handover) dla robota humanoidalnego Unitree G1</description>
  <maintainer email="contact@robotg1handover.org">Robot G1 Handover Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_python</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
